; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/em28xx/extr_em28xx-video.c_vidioc_querybuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/em28xx/extr_em28xx-video.c_vidioc_querybuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_buffer = type { i32 }
%struct.em28xx_fh = type { i64, i32, i32, %struct.em28xx* }
%struct.em28xx = type { i32, i32 }

@V4L2_BUF_TYPE_VIDEO_CAPTURE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_buffer*)* @vidioc_querybuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_querybuf(%struct.file* %0, i8* %1, %struct.v4l2_buffer* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_buffer*, align 8
  %8 = alloca %struct.em28xx_fh*, align 8
  %9 = alloca %struct.em28xx*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_buffer* %2, %struct.v4l2_buffer** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.em28xx_fh*
  store %struct.em28xx_fh* %13, %struct.em28xx_fh** %8, align 8
  %14 = load %struct.em28xx_fh*, %struct.em28xx_fh** %8, align 8
  %15 = getelementptr inbounds %struct.em28xx_fh, %struct.em28xx_fh* %14, i32 0, i32 3
  %16 = load %struct.em28xx*, %struct.em28xx** %15, align 8
  store %struct.em28xx* %16, %struct.em28xx** %9, align 8
  %17 = load %struct.em28xx*, %struct.em28xx** %9, align 8
  %18 = call i32 @check_dev(%struct.em28xx* %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %10, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %3
  %22 = load i32, i32* %10, align 4
  store i32 %22, i32* %4, align 4
  br label %50

23:                                               ; preds = %3
  %24 = load %struct.em28xx_fh*, %struct.em28xx_fh** %8, align 8
  %25 = getelementptr inbounds %struct.em28xx_fh, %struct.em28xx_fh* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @V4L2_BUF_TYPE_VIDEO_CAPTURE, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = load %struct.em28xx_fh*, %struct.em28xx_fh** %8, align 8
  %31 = getelementptr inbounds %struct.em28xx_fh, %struct.em28xx_fh* %30, i32 0, i32 2
  %32 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %33 = call i32 @videobuf_querybuf(i32* %31, %struct.v4l2_buffer* %32)
  store i32 %33, i32* %4, align 4
  br label %50

34:                                               ; preds = %23
  %35 = load %struct.em28xx_fh*, %struct.em28xx_fh** %8, align 8
  %36 = getelementptr inbounds %struct.em28xx_fh, %struct.em28xx_fh* %35, i32 0, i32 1
  %37 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %38 = call i32 @videobuf_querybuf(i32* %36, %struct.v4l2_buffer* %37)
  store i32 %38, i32* %11, align 4
  %39 = load %struct.em28xx*, %struct.em28xx** %9, align 8
  %40 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.em28xx*, %struct.em28xx** %9, align 8
  %43 = getelementptr inbounds %struct.em28xx, %struct.em28xx* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = mul nsw i32 %41, %44
  %46 = mul nsw i32 %45, 2
  %47 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %7, align 8
  %48 = getelementptr inbounds %struct.v4l2_buffer, %struct.v4l2_buffer* %47, i32 0, i32 0
  store i32 %46, i32* %48, align 4
  %49 = load i32, i32* %11, align 4
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %34, %29, %21
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @check_dev(%struct.em28xx*) #1

declare dso_local i32 @videobuf_querybuf(i32*, %struct.v4l2_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
